[package]
name = "myChain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libp2p = {version="0.53.2", features = ["macros", "yamux", "tcp", "tokio", "mdns", "floodsub", "noise", "gossipsub", "quic", "websocket", "dns"]}
tokio = { version="1.35.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"]}
tokio-stream = "0.1.14"
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
once_cell = "1.19.0"
log = "0.4.20"
futures = "0.3.30"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
# libp2p-dns = {version = "0.41.1", features = ["tokio", "async-std"]}
